--- a/example/README.adoc
+++ b/example/README.adoc
@@ -2,11 +2,11 @@
 
 == create buf setup
 
-== webui app
+== app
 
-yarn create react-app webui --template typescript
-yarn add @greatliontech/protobuf-ts-rtk-query @protobuf-ts/grpcweb-transport react-hook-form
+`npm create vite@latest app -- --template react-ts`
+`npm install @greatliontech/protobuf-ts-rtk-query @protobuf-ts/grpcweb-transport @reduxjs/toolkit react-hook-form react-redux`
 
-== go service
+== service
 
  
