--- a/example/README.adoc
+++ b/example/README.adoc
@@ -5,7 +5,7 @@
 == app
 
 `npm create vite@latest app -- --template react-ts`
-`npm install @greatliontech/protobuf-ts-rtk-query @protobuf-ts/grpcweb-transport @reduxjs/toolkit react-hook-form react-redux`
+`npm install @greatliontech/protobuf-ts-rtk-query @protobuf-ts/grpcweb-transport @reduxjs/toolkit react-hook-form react-redux react-router-dom`
 
 == service
 
